--- a/assets/css/meyawo.css
+++ b/assets/css/meyawo.css
@@ -238,7 +238,7 @@ table {
 caption {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-  color: #6c757d;
+  color: #000;
   text-align: left;
   caption-side: bottom;
 }
@@ -582,24 +582,46 @@ pre code {
 @media (min-width: 576px) {
   .container {
     max-width: 540px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 
 @media (min-width: 768px) {
   .container {
     max-width: 720px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .service-card-up{
+    width: 100%;
+  }
+  .service-card-up.body {
+    width: 100%;
   }
 }
 
 @media (min-width: 992px) {
   .container {
     max-width: 960px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 
 @media (min-width: 1200px) {
   .container {
     max-width: 1140px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 
@@ -619,8 +641,8 @@ pre code {
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
+  margin-right: 100px;
+  margin-left: 70px;
 }
 
 .no-gutters {
@@ -11270,11 +11292,11 @@ p {
 }
 .service-card-up{
   position: relative;
-  height: 75px;
-  width: 75px;
-  border: 1px solid #dee2e6;
+  height: 50px;
+  width: 50px;
+  border: 1px solid #000;
   overflow: hidden;
-  border-radius: 3px;
+  border-radius: 20px;
 }
 .service-card-tugas{
   position: relative;
@@ -11384,7 +11406,7 @@ p {
 
 .service-card-up .body img.icon {
   margin-top: 5px;
-  width: 40px;
+  width: 20px;
   margin-bottom: 25px;
   -webkit-transition: all, 0.1s;
   transition: all, 0.1s;
@@ -11415,7 +11437,7 @@ p {
 
 .service-card-up:hover .body img.icon {
   margin-top: 5px;
-  width: 45px;
+  width: 25px;
   margin-bottom: 15px;
   visibility: hidden;
 }
