--- a/assets/css/meyawo.css
+++ b/assets/css/meyawo.css
@@ -12497,3 +12497,47 @@ pre .code {
 .section-lg {
   padding: 100px 0 !important;
 }
+@media screen and (max-width : 700px) {
+  .service-card-up .body {
+    padding: 10px;
+  }
+  
+  .service-card-up .body img.icon {
+    margin-top: 5px;
+    width: 20px;
+    margin-bottom: 25px;
+    -webkit-transition: all, 0.1s;
+    transition: all, 0.1s;
+  }
+
+  .header-title {
+    font-size: 5rem;
+    font-weight: bold;
+    opacity: .8;
+    color: #212529;
+    margin-left: -300px;
+  }
+
+  .header .header-content .header-subtitle {
+    font-size: calc(10px + (22 - 10) * ((100vw - 300px) / (1300 - 300)));
+    letter-spacing: calc(1px + (7 - 1) * ((100vw - 300px) / (1300 - 300)));
+    opacity: .8;
+    margin-top: -10px;
+    margin-bottom: 20px;
+    margin-left: -251px;
+  }
+
+  .service-card-up{
+    margin-left: -150px;
+    height: 50px;
+    width: 50px;
+    border: 1px solid #000;
+    overflow: hidden;
+    border-radius: 20px;
+  }
+ 
+  .row{
+    display: flex;
+    flex-wrap: nowrap;
+  }
+}
