--- a/assets/css/meyawo.css
+++ b/assets/css/meyawo.css
@@ -595,10 +595,10 @@ pre code {
     margin-left: auto;
   }
   .service-card-up{
-    width: 100%;
+    width: 50;
   }
   .service-card-up.body {
-    width: 100%;
+    width: 50%;
   }
 }
 
@@ -11307,6 +11307,7 @@ p {
   padding: 10px;
 }
 
+
 .service-card-tugas .body img.icon {
   margin-top: 50px;
   width: 40px;
@@ -11506,14 +11507,6 @@ p {
   border-radius: 0;
 }
 
-@media (max-width: 767.98px) {
-  .portfolio-card {
-    margin-bottom: 30px;
-  }
-  .service-card {
-    margin:100%;
-  }
-}
 
 /* Pricing card */
 .pricing-wrapper {
@@ -12493,52 +12486,4 @@ pre .code {
 
 .section-lg {
   padding: 100px 0 !important;
-}
-@media screen and (max-width : 476px) {
-  .service-card-up .body {
-    padding: 10px;
-  }
-  
-  .service-card-up .body img.icon {
-    margin-top: 5px;
-    width: 20px;
-    margin-bottom: 25px;
-    -webkit-transition: all, 0.1s;
-    transition: all, 0.1s;
-  }
-
-  .header-title {
-    font-size: 5rem;
-    font-weight: bold;
-    opacity: .8;
-    color: #212529;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .header .header-content .header-subtitle {
-    font-size: calc(10px + (22 - 10) * ((100vw - 300px) / (1300 - 300)));
-    letter-spacing: calc(1px + (7 - 1) * ((100vw - 300px) / (1300 - 300)));
-    justify-content: left;
-    opacity: .8;
-    margin-top: -10px;
-    margin-bottom: 20px;
-  }
-
-  .service-card-up{
-    justify-content: left;
-    margin : 0;
-    height: 50px;
-    width: 50px;
-    border: 1px solid #000;
-    overflow: hidden;
-    border-radius: 20px;
-  }
- 
-  .row{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
-  }
 }
